# tnah-2026-partie1

./: atget_photos.ttl  chapitre_1.ipynb  chapitre_2.ipynb  chapitre_3.ipynb  chapitre_4.ipynb  graph_final.ttl  pyproject.toml
photographies/: cb40265861p.ttl  cb402658621.ttl  cb40265863c.ttl  cb40265864q.ttl  cb402658652.ttl  cb40265866d.ttl  cb40265867r.ttl  cb402658683.ttl  cb40265869f.ttl  cb40265870n.ttl  cb402658710.ttl  cb40265872b.ttl  cb40265873p.ttl  cb402658741.ttl  cb40265875c.ttl  cb40265876q.ttl  cb402658772.ttl  cb40265878d.ttl  cb40265879r.ttl  cb40265880z.ttl  cb402658819.ttl  cb40265882n.ttl  cb402658830.ttl  cb40265884b.ttl  cb40265885p.ttl  cb402658861.ttl  cb40265887c.ttl  cb40265888q.ttl  cb402658892.ttl  cb402658908.ttl  cb40265891m.ttl  cb40265892z.ttl  cb402658939.ttl  cb40265894n.ttl  cb402658950.ttl  cb40265896b.ttl  cb40265897p.ttl  cb402658981.ttl  cb40265899c.ttl  cb40265900r.ttl  (+487 more)
src/tnah_2026_partie1/: __init__.py
