[project]
name = "tnah-2026-partie1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "<Mélina>", email = "<melinafrnt@gmail.com>" }
]
requires-python = ">=3.12"
dependencies = [
    "pyvis>=0.3.2",
    "rdflib>=7.5.0",
    "sparqlwrapper>=2.0.0",
]

[project.scripts]
tnah-2026-partie1 = "tnah_2026_partie1:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
